# Firmxtract

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.txt  TODO.md  install.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
rust/: .gitkeep
src/firmxtract/: __init__.py
src/firmxtract/analysis/: __init__.py  secrets.py
src/firmxtract/cli/: __init__.py  main.py
src/firmxtract/core/: __init__.py  base.py  orchestrator.py  pipeline.py  plugin_loader.py  session.py
src/firmxtract/extraction/: __init__.py  binwalk_wrapper.py
src/firmxtract/hardware/: __init__.py  hal.py  spi.py  uart.py
src/firmxtract/plugins/: __init__.py
src/firmxtract/plugins/builtin/: __init__.py  entropy_analyzer.py
src/firmxtract/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  test_orchestrator.py  test_secrets.py  test_spi.py  test_uart.py
tests/mocks/: __init__.py
